--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,14 +34,14 @@ dist.jar=${dist.dir}/AroShop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.32.3.2.jar=../../../Desktop/SQLITE/sqlite-jdbc-3.32.3.2.jar
+file.reference.sqlite-jdbc-3.32.3.2.jar=src/Database/sqlite-jdbc-3.32.3.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
-jar.compress=false
+jar.compress=true
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.32.3.2.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.sqlite-jdbc-3.32.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
