Changed project properties

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ file.reference.sqlite-jdbc-3.32.3.2.jar=../../../Desktop/SQLITE/sqlite-jdbc-3.32
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.32.3.2.jar}:\
     ${javafx.classpath.extension}
