--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,8 +40,8 @@ includes=**
 jar.archive.disabled=true
 jar.compress=true
 javac.classpath=\
-    ${javafx.classpath.extension}:\
-    ${file.reference.sqlite-jdbc-3.32.3.2.jar}
+    ${file.reference.sqlite-jdbc-3.32.3.2.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -77,8 +77,8 @@ javafx.classpath.extension=\
     ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
     ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
     ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
-javafx.deploy.adddesktopshortcut=false
-javafx.deploy.addstartmenushortcut=false
+javafx.deploy.adddesktopshortcut=true
+javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -87,7 +87,7 @@ javafx.deploy.embedJNLP=true
 javafx.deploy.icon=
 javafx.deploy.icon.native=src/Icon/Aro.ico
 javafx.deploy.includeDT=true
-javafx.deploy.installpermanently=false
+javafx.deploy.installpermanently=true
 javafx.deploy.permissionselevated=false
 javafx.deploy.splash=src/Icon/Aro.ico
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
