Reorganised the 'All Items' view

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,5 @@
+auxiliary.io-github-hmvictor-nb-sonarlint.sonarLint_2e_active=true
+auxiliary.io-github-hmvictor-nb-sonarlint.sonarLint_2e_excludedFilePatterns=
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 compile.on.save=true
 do.depend=true
@@ -9,4 +11,4 @@ javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
 jlink.strip=false
-user.properties.file=C:\\Users\\Hp\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\Hp\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
