--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,7 @@ file.reference.sqlite-jdbc-3.32.3.2.jar=src/Database/sqlite-jdbc-3.32.3.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
-jar.compress=true
+jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.32.3.2.jar}:\
     ${javafx.classpath.extension}
@@ -77,9 +77,9 @@ javafx.classpath.extension=\
     ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
     ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
     ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
-javafx.deploy.adddesktopshortcut=true
-javafx.deploy.addstartmenushortcut=true
-javafx.deploy.allowoffline=true
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
+javafx.deploy.allowoffline=false
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
 javafx.deploy.disable.proxy=false
@@ -87,7 +87,7 @@ javafx.deploy.embedJNLP=true
 javafx.deploy.icon=
 javafx.deploy.icon.native=src/Icon/Aro.ico
 javafx.deploy.includeDT=true
-javafx.deploy.installpermanently=true
+javafx.deploy.installpermanently=false
 javafx.deploy.permissionselevated=false
 javafx.deploy.splash=src/Icon/Aro.ico
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
