--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ hs_err_pid*
 # End of https://www.toptal.com/developers/gitignore/api/java
 /build/
 /dist/
+/src/Database/sqlite-jdbc-3.32.3.2.jar
